[package]
name = "garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
directories = "5.0.1"
eyre = "0.6.8"
flate2 = "1.0.28"
lazy_static = "1.4.0"
nix = "0.30.0"
process_path = "0.1.4"
rand = "0.9.0"
sysinfo = "0.35.0"
tar = "0.4.40"
windows = { version = "0.61.0", features = ["Win32_System_Console", "Win32_Foundation"] }
