[package]
name = "garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
directories = "5.0.1"
eyre = "0.6.12"
flate2 = "1.1.2"
lazy_static = "1.5.0"
nix = "0.30.1"
process_path = "0.1.4"
rand = "0.9.2"
sysinfo = "0.36.1"
tar = "0.4.44"
windows = { version = "0.61.3", features = ["Win32_System_Console", "Win32_Foundation"] }
