[package]
name = "garden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
directories = "5.0.1"
eyre = "0.6.12"
flate2 = "1.1.8"
lazy_static = "1.5.0"
nix = "0.31.1"
process_path = "0.1.4"
rand = "0.9.2"
sysinfo = "0.38.0"
tar = "0.4.44"
windows = { version = "0.62.2", features = ["Win32_System_Console", "Win32_Foundation"] }
